example/invalid/syntaxErr/struct&reference/badStructConstruction.wacc
# bad struct construction

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  struct a 
    int x;
    int y
  end
end